[project]
name = "ec2-network-performance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "types-aiofiles>=25.1.0.20251011",
    "types-tqdm>=4.67.0.20250809",
]
